--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,15 +2,18 @@
   "dependencies": {
     "com.saitama.mathematics": "https://github.com/5aitama/Saitama.Mathematics.git",
     "com.saitama.proceduralmesh": "https://github.com/5aitama/Saitama.ProceduralMesh.git",
-    "com.unity.burst": "1.4.0-preview.2",
-    "com.unity.collab-proxy": "1.2.16",
+    "com.unity.burst": "1.3.3",
+    "com.unity.cinemachine": "2.6.0",
+    "com.unity.collab-proxy": "1.3.8",
     "com.unity.entities": "0.11.1-preview.4",
-    "com.unity.ide.rider": "1.1.4",
+    "com.unity.ide.rider": "1.2.1",
+    "com.unity.ide.visualstudio": "2.0.2",
     "com.unity.ide.vscode": "1.2.1",
-    "com.unity.render-pipelines.universal": "7.3.1",
-    "com.unity.rendering.hybrid": "0.5.2-preview.4",
+    "com.unity.recorder": "2.2.0-preview.4",
+    "com.unity.render-pipelines.universal": "8.2.0",
+    "com.unity.rendering.hybrid": "0.7.0-preview.24",
     "com.unity.test-framework": "1.1.14",
-    "com.unity.textmeshpro": "2.0.1",
+    "com.unity.textmeshpro": "3.0.0-preview.1",
     "com.unity.timeline": "1.2.15",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
